[gd_scene load_steps=27 format=3 uid="uid://dgmw3juox25qr"]

[ext_resource type="Script" path="res://scripts/intro-script.gd" id="1_00tl0"]
[ext_resource type="Texture2D" uid="uid://dyvn0r3jv7nv0" path="res://assets/sprites/Pared A.png" id="2_xgfxi"]
[ext_resource type="Texture2D" uid="uid://c2xv6ch6cv2o" path="res://assets/sprites/Piso.png" id="3_rpfsi"]
[ext_resource type="PackedScene" uid="uid://baepnmdpm01id" path="res://scenes/gotas_the_cat_3d.tscn" id="3_xh2jo"]
[ext_resource type="PackedScene" uid="uid://cijiqpxde2iv3" path="res://scenes/ambient/fence_straight.tscn" id="4_dxd7s"]
[ext_resource type="Shader" path="res://scripts/shaders/sky-2.gdshader" id="5_iia1e"]
[ext_resource type="Texture2D" uid="uid://khgggs7rrsgx" path="res://assets/sprites/Hubble_NGC1637_potw2449a.jpg" id="6_nak5c"]
[ext_resource type="FontFile" uid="uid://dogky3a4mipuh" path="res://assets/fonts/CharisSILR.ttf" id="7_2gg2b"]
[ext_resource type="Script" path="res://scripts/texto1-intro.gd" id="7_keolf"]
[ext_resource type="Script" path="res://scripts/texto2-intro.gd" id="9_02ye8"]
[ext_resource type="Script" path="res://scripts/texto3-intro.gd" id="10_0d584"]
[ext_resource type="Script" path="res://scripts/texto4-intro.gd" id="11_5131s"]
[ext_resource type="PackedScene" uid="uid://cbiqp0iutof3w" path="res://scenes/ambient/black_hole.tscn" id="12_riksv"]

[sub_resource type="BoxShape3D" id="BoxShape3D_yumej"]
size = Vector3(19.6643, 1.30774, 0.257202)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vddtv"]
diffuse_mode = 3
albedo_texture = ExtResource("2_xgfxi")
roughness = 0.4
subsurf_scatter_enabled = true
proximity_fade_distance = 2.0

[sub_resource type="PlaneMesh" id="PlaneMesh_vp7g7"]
size = Vector2(9, 8)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_a7emp"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ueawq"]
diffuse_mode = 3
albedo_texture = ExtResource("3_rpfsi")
roughness = 0.0
ao_light_affect = 0.1
uv1_triplanar = true

[sub_resource type="PlaneMesh" id="PlaneMesh_jjs32"]
size = Vector2(4, 2)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_t5kdi"]
plane = Plane(0, 0, 1, 0)

[sub_resource type="BoxShape3D" id="BoxShape3D_scagp"]
size = Vector3(36, 5, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_egpvd"]
shader = ExtResource("5_iia1e")
shader_parameter/energy = 1.0
shader_parameter/gamma = 1.0
shader_parameter/scale = Vector3(1, 1, 1)
shader_parameter/triplanar_blend_power = 1.0
shader_parameter/seamless_blend = 0.1
shader_parameter/sky_tex = ExtResource("6_nak5c")

[sub_resource type="Sky" id="Sky_jwaj5"]
sky_material = SubResource("ShaderMaterial_egpvd")

[sub_resource type="Environment" id="Environment_vllak"]
background_mode = 2
sky = SubResource("Sky_jwaj5")

[sub_resource type="BoxShape3D" id="BoxShape3D_lu66d"]
size = Vector3(3, 4, 8)

[sub_resource type="SphereShape3D" id="SphereShape3D_64740"]
radius = 0.7

[node name="Intro" type="Node"]
script = ExtResource("1_00tl0")

[node name="Wall" type="StaticBody3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0.729865, 0)
metadata/_edit_group_ = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="Wall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.067749, 0.15387, -0.0238158)
shape = SubResource("BoxShape3D_yumej")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Wall"]
transform = Transform3D(2.83945, 7.04134e-10, 0.016752, 0.0457458, -4.37057e-08, -1.0398, 0, 1, -4.54571e-08, -2.27718, 3.44276, 0)
material_override = SubResource("StandardMaterial3D_vddtv")
mesh = SubResource("PlaneMesh_vp7g7")

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("WorldBoundaryShape3D_a7emp")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
transform = Transform3D(10, 0, 0, 0, 1, 0, 0, 0, 1.4027, 0, 0, 1.44032)
material_override = SubResource("StandardMaterial3D_ueawq")
mesh = SubResource("PlaneMesh_jjs32")

[node name="StaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.77826)

[node name="BehindWall" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -7)
shape = SubResource("WorldBoundaryShape3D_t5kdi")

[node name="FrontWall" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.33843, 2, 0.871334)
shape = SubResource("BoxShape3D_scagp")

[node name="GotasTheCat3D" parent="." groups=["player"] instance=ExtResource("3_xh2jo")]
transform = Transform3D(0.999759, 0, -0.021937, 0, 1, 0, 0.021937, 0, 0.999759, -19.0276, 0.895345, 3.16726)

[node name="CameraController" type="Node3D" parent="GotasTheCat3D"]
transform = Transform3D(0.999742, 0.00958808, -0.0205617, 0, 0.906307, 0.422618, 0.0226873, -0.422509, 0.906074, -13.9129, 0.895345, 2.5972)
top_level = true

[node name="CameraTarget" type="Node3D" parent="GotasTheCat3D/CameraController"]
transform = Transform3D(1, 0, 5.32907e-15, 0, 1, 0, 0, 0, 1, 7.4506e-09, 0, 3.51494)

[node name="Camera3D" type="Camera3D" parent="GotasTheCat3D/CameraController/CameraTarget"]
transform = Transform3D(1, -1.02446e-08, 5.58794e-09, 0, 1, 3.57628e-07, 0, -1.78814e-07, 1, 0, 0, 0)
current = true
size = 4.0
near = 0.1

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.936623, 0.350338, 0, -0.350338, 0.936623, -1.23094, 7.48882, 18.8489)
light_color = Color(0.87134, 0.801777, 0.738098, 1)
light_energy = 2.0
directional_shadow_mode = 0

[node name="Fences" type="Node3D" parent="."]

[node name="fence-straight2" parent="Fences" instance=ExtResource("4_dxd7s")]
transform = Transform3D(-1.31134e-07, 0, -3, 0, 3, 0, 3, 0, -1.31134e-07, -23.3919, 1.98191e-07, 1.28224)

[node name="fence-straight4" parent="Fences" instance=ExtResource("4_dxd7s")]
transform = Transform3D(-1.31134e-07, 0, -3, 0, 3, 0, 3, 0, -1.31134e-07, -23.3919, 1.98191e-07, 7.08029)

[node name="fence-straight3" parent="Fences" instance=ExtResource("4_dxd7s")]
transform = Transform3D(-1.31134e-07, 0, -3, 0, 3, 0, 3, 0, -1.31134e-07, -23.3919, 1.98191e-07, 4.06162)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_vllak")

[node name="TextAreas" type="Node3D" parent="."]

[node name="AreaTexto1" type="Area3D" parent="TextAreas"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 2, 2.31945)
script = ExtResource("7_keolf")

[node name="Label3DTexto1" type="Label3D" parent="TextAreas/AreaTexto1"]
text = "texto 1"
font = ExtResource("7_2gg2b")
font_size = 64

[node name="CollisionShape3DTexto1" type="CollisionShape3D" parent="TextAreas/AreaTexto1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.5, 1.05396)
shape = SubResource("BoxShape3D_lu66d")

[node name="AreaTexto2" type="Area3D" parent="TextAreas"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 2.31945)
script = ExtResource("9_02ye8")

[node name="Label3DTexto2" type="Label3D" parent="TextAreas/AreaTexto2"]
text = "texto 2"
font = ExtResource("7_2gg2b")
font_size = 64

[node name="CollisionShape3DTexto2" type="CollisionShape3D" parent="TextAreas/AreaTexto2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 1.05396)
shape = SubResource("BoxShape3D_lu66d")

[node name="AreaTexto3" type="Area3D" parent="TextAreas"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 2, 2.31945)
script = ExtResource("10_0d584")

[node name="Label3DTexto3" type="Label3D" parent="TextAreas/AreaTexto3"]
text = "texto 3"
font = ExtResource("7_2gg2b")
font_size = 64

[node name="CollisionShape3DTexto3" type="CollisionShape3D" parent="TextAreas/AreaTexto3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 1.05396)
shape = SubResource("BoxShape3D_lu66d")

[node name="AreaTexto4" type="Area3D" parent="TextAreas"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.4271, 2, 2.31945)
script = ExtResource("11_5131s")

[node name="Label3DTexto4" type="Label3D" parent="TextAreas/AreaTexto4"]
text = "texto 3"
font = ExtResource("7_2gg2b")
font_size = 64

[node name="CollisionShape3DTexto4" type="CollisionShape3D" parent="TextAreas/AreaTexto4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 1.05396)
shape = SubResource("BoxShape3D_lu66d")

[node name="BlackHoleArea3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.5569, 1.66134, 2.38373)

[node name="BlackHole" parent="BlackHoleArea3D" instance=ExtResource("12_riksv")]
transform = Transform3D(1, 0, 0, 0, 0.999541, -0.0303117, 0, 0.0303117, 0.999541, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="BlackHoleArea3D"]
shape = SubResource("SphereShape3D_64740")

[connection signal="body_entered" from="TextAreas/AreaTexto1" to="TextAreas/AreaTexto1" method="_on_body_entered"]
[connection signal="body_entered" from="TextAreas/AreaTexto2" to="TextAreas/AreaTexto2" method="_on_body_entered"]
[connection signal="body_entered" from="TextAreas/AreaTexto3" to="TextAreas/AreaTexto3" method="_on_body_entered"]
[connection signal="body_entered" from="TextAreas/AreaTexto4" to="TextAreas/AreaTexto4" method="_on_body_entered"]
[connection signal="body_entered" from="BlackHoleArea3D" to="." method="_on_black_hole_area_3d_body_entered"]
